--- a/CSS/6.4 Motivation Meme Project/style.css
+++ b/CSS/6.4 Motivation Meme Project/style.css
@@ -1,28 +1,28 @@
-body{
-    background-color: black;
+body {
+  background-color: black;
 }
-.title{
-color: white;
-text-align: center;
-text-transform: uppercase;
-margin-top: 40px;
+.title {
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 40px;
 }
-h2{
-    text-transform: uppercase;
-    font-size: 1rem;
+h2 {
+  text-transform: uppercase;
+  font-size: 1rem;
 }
-.container{
-    text-align: center;
-    color: white;
-    font-family: 'Libre Baskerville', serif;
-    width: 45%;
-    margin: 10%;
-    margin-top: 80px;
+.container {
+  text-align: center;
+  color: white;
+  font-family: "Libre Baskerville", serif;
+  width: 45%;
+  margin: 10%;
+  margin-top: 80px;
 }
-.meme-img{
-    border: 5px solid white;
-    width: 100%;
+.meme-img {
+  border: 5px solid white;
+  width: 100%;
 }
-.parent-div{
-display: flex;
+.parent-div {
+  display: flex;
 }
