--- a/CSS/7.1 Combining Selectors/style.css
+++ b/CSS/7.1 Combining Selectors/style.css
@@ -52,3 +52,32 @@ li.done{
  /* We can even do the ul > p.done {
     font-size:0.5rem;
  } */
+
+/* 
+ Rules :
+
+ Group
+h1,
+h2 {
+  color: blueviolet;
+}
+
+Child
+.box > p {
+  color: firebrick;
+}
+
+Descendent
+.box li {
+  color: blue;
+}
+
+Chained
+li.done {
+  color: green;
+}
+
+Multiple Combiners
+ul p.done {
+  font-size: 0.5rem;
+} */
